FK6 corrigenda up to Signal processing

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -84,7 +84,7 @@ Let us note that implications opposite to these shown may not hold, either.  For
 %	- the conditions for observation of zero-width photonic bands (e.g. Fig. \ref{fg_cdh2}b) and zero-width photonic band gaps (e.g. Fig.)
 %  * pointed out the fundamental problems: 
 
-% Excessive spatial dispersion in known structures, with regards to the longitudinal changes in the wavevector (i.e. in the wavenumber); i.e. the eff-param spectra often 'stick' to the BZ boundary. Without this interpretation, various papers fail to explain the typical "antiresonance" in effective parameters, that seems to cause confusion. http://onlinelibrary.wiley.com/doi/10.1002/adma.201502298/full etc.)
+% Excessive spatial dispersion in known structures, with regard to the longitudinal changes in the wavevector (i.e. in the wavenumber); i.e. the eff-param spectra often 'stick' to the BZ boundary. Without this interpretation, various papers fail to explain the typical "antiresonance" in effective parameters, that seems to cause confusion. http://onlinelibrary.wiley.com/doi/10.1002/adma.201502298/full etc.)
 
 %  * the RESULTS section has shown that for the idealized lattice of resonant elements, denoted as a Bloch lattice in \ref{simovski2007bloch}, the spectra of effective index of refraction would have a form of alternating photonic bands, with always growing Neff(f), and photonic band gaps, where $Neff'(f)$ follows a Brillouin zone boundary, except for well-defined individual resonances of the electric or magnetic dipole. The results have, nonetheless, also proven that this interpretation is only approximate, due to evanescent inter-cell coupling and the resulting spatial dispersion. In particular, some structures made of metal preclude to use the $Neff'(f)$
 
