--- a/theory.tex
+++ b/theory.tex
@@ -371,7 +371,7 @@ Temporal modulation of the wave
 is equivalent to the wave being formed by superposition of multiple frequency components in the frequency domain, with their respective amplitudes given by the Fourier transform of the field envelope. The temporal position of the envelope in is determined by their \textit{mutual phase difference}, not by the absolute wave phase. 
 %redund As a special case, when all components propagate with the same velocity, the envelope does not shift against the wave phase. 
 
-A similar argument can be made with regards to the spatial modulation of the wave. Any wave shape other than the infinite plane wave is a superposition of waves with different wavevectors, and the direction of propagation of its spatial envelope is given by mutual phase difference of the constituent waves. % TODO rewrite-unclear
+A similar argument can be made with regard to the spatial modulation of the wave. Any wave shape other than the infinite plane wave is a superposition of waves with different wavevectors, and the direction of propagation of its spatial envelope is given by mutual phase difference of the constituent waves. % TODO rewrite-unclear
 
 The velocity vector of the envelope propagation, denoted as the \textit{group velocity}\index{velocity!group v.} $\vg$, can be found as the gradient of frequency by the wavevector: %% TODO cite
 \begin{equation} \vg := \frac{\partial \omega}{\partial \kk} \equiv 
@@ -409,7 +409,7 @@ $$ \frac{\partial \vg(\kk)}{\partial \alpha} \neq 0.$$
 As a result, the group velocity in anisotropic media is always much more sensitive to the angle than the phase velocity, and Snell law does not predict it correctly. It can be regarded as a spatially-dependent manifestation of the group velocity dispersion.
 
 In Fig. \ref{fg_ifc2}d, an extreme case of spatial walk-off is shown on the example of a \textit{hyperbolic}\index{medium!hyperbolic} medium with different signs of the permittivity along different axes. %% TODO study Belov2003 and possibly correct this if hyperbolas are wrong
- The normal to its IFC is nearly perpendicular to the wavevector, and accordingly, the beam refracts in opposite angle with regards to the incident wave. The $k_x$ component of the wave vector is however still maintained. A further geometrical development of the beam refraction is in Ref. \cite[p. 46]{klingshirn2007semiconductor}.
+ The normal to its IFC is nearly perpendicular to the wavevector, and accordingly, the beam refracts in opposite angle with regard to the incident wave. The $k_x$ component of the wave vector is however still maintained. A further geometrical development of the beam refraction is in Ref. \cite[p. 46]{klingshirn2007semiconductor}.
 
 %If the amplitude and phase of the wave is not  temporal shape of a wave can be composed as a superposition of different frequency components with certain amplitude and phase. Similarly, any spatial shape of a beam can be composed of infinite waves of different wavevectors. The isofrequency contours, and their dependence on frequency, allow to determine how the temporal and spatial envelope will propagate. 
 %Assuming a short pulse for simplicity
@@ -646,7 +646,7 @@ Thus, the two plots in the right column of Fig. \ref{fg_dcllactivity} can also b
 \paragraph{Continuity requirements} %{{{ 
 In the previous text, only the phase-related phenomena were discussed. The dependence of the dispersion curves and IFCs were computed as a result of the local or nonlocal response of the medium. Geometrical arguments were then used to infer the angle of refraction at the interface of two media, showing e.g. that a positive or negative refraction may occur. It was also shown that the beam may refract in a different direction than the wave vector, and that, in some cases, the notion of index of refraction can be used to simplify the problem to an application of the Snell law.
 
-The conservation of the wave phase at the interface is, however, not the only constraint to the refraction and reflection problem. Assuming there is no surface current nor surface charge, and that both media are local, the components of the fields $\E$, $\HH$ \textit{parallel} with regards to the interface must be continuous, whereas the \textit{perpendicular} component of the displacements $\D$, $\B$ is continuous, too. This rule can be derived from the Maxwell equations in Eqs. (\ref{eq_me1}--\ref{eq_me4}) by integrating them over infinitesimally thin loops or surfaces that are symmetrically placed on the interface \cite[pp. 26-29]{klingshirn2007semiconductor}. 
+The conservation of the wave phase at the interface is, however, not the only constraint to the refraction and reflection problem. Assuming there is no surface current nor surface charge, and that both media are local, the components of the fields $\E$, $\HH$ \textit{parallel} with regard to the interface must be continuous, whereas the \textit{perpendicular} component of the displacements $\D$, $\B$ is continuous, too. This rule can be derived from the Maxwell equations in Eqs. (\ref{eq_me1}--\ref{eq_me4}) by integrating them over infinitesimally thin loops or surfaces that are symmetrically placed on the interface \cite[pp. 26-29]{klingshirn2007semiconductor}. 
 
 %}}}
 \paragraph{Impedance} %{{{ 
